Aula 6: Projeto Final - pt 1 Final

--- a/aula2-distribuicao-de-frequencia.ipynb
+++ b/aula2-distribuicao-de-frequencia.ipynb
@@ -180,7 +180,7 @@
     "plt.style.use('seaborn')\n",
     "\n",
     "# Importando Dataset\n",
-    "d = pd.read_csv('dados.csv')\n",
+    "d = pd.read_csv('dados_pnad.csv')\n",
     "d.head()"
    ]
   },
@@ -1557,9 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1584,13 +1582,6 @@
     "        ylabel='Variação de Altura');\n",
     "# ax.set_yticklabels(indices_classes);"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
