--- a/aula3-medidas-de-tendencia-central.ipynb
+++ b/aula3-medidas-de-tendencia-central.ipynb
@@ -65,7 +65,7 @@
     "plt.style.use('seaborn')\n",
     "\n",
     "# Importando Dataset PNAD\n",
-    "df_pnad = pd.read_csv('dados.csv')\n",
+    "df_pnad = pd.read_csv('dados_pnad.csv')\n",
     "\n",
     "# Importando Dataset Boletins\n",
     "df_boletins = pd.read_csv('dados_boletins.csv', index_col='Matérias')"
@@ -243,7 +243,7 @@
        "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Histório</th>\n",
+       "      <th>História</th>\n",
        "      <td>6</td>\n",
        "      <td>3.0</td>\n",
        "      <td>8.0</td>\n",
@@ -259,7 +259,7 @@
        "Português       10       0.0      8.0\n",
        "Inglês           4       0.5      7.0\n",
        "Geografia        8       1.0      8.0\n",
-       "Histório         6       3.0      8.0"
+       "História         6       3.0      8.0"
       ]
      },
      "execution_count": 3,
@@ -564,7 +564,7 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Histório</th>\n",
+       "      <th>História</th>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -595,7 +595,7 @@
        "            Fulano\n",
        "Matérias          \n",
        "Inglês           4\n",
-       "Histório         6\n",
+       "História         6\n",
        "Matemática       8\n",
        "Geografia        8\n",
        "Química          8\n",
@@ -695,7 +695,7 @@
        "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Histório</th>\n",
+       "      <th>História</th>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -719,7 +719,7 @@
        "Matérias            \n",
        "Português        0.0\n",
        "Inglês           0.5\n",
-       "Histório         3.0\n",
+       "História         3.0\n",
        "Física           9.5\n",
        "Matemática      10.0\n",
        "Química         10.0"
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
