--- a/aula4-medidas-separatrizes.ipynb
+++ b/aula4-medidas-separatrizes.ipynb
@@ -65,7 +65,7 @@
     "plt.style.use('seaborn')\n",
     "\n",
     "# Importando Dataset PNAD\n",
-    "df_pnad = pd.read_csv('dados.csv')"
+    "df_pnad = pd.read_csv('dados_pnad.csv')"
    ]
   },
   {
@@ -681,13 +681,6 @@
     "ax_altura.set_title('Boxplot Altura')\n",
     "ax_altura.set_xlabel('Metros')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
