Incluindo novos testes e continuando aula 1 de probabilidade e amostragem

--- a/2-probabilidade-e-amostragem/Aula 1 - Distribuição binomial.ipynb
+++ b/2-probabilidade-e-amostragem/Aula 1 - Distribuição binomial.ipynb
@@ -19,27 +19,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "## Base Teórica\n",
-    "Uma distribuição de probabilidade muito conhecida é a distribuição binomial, que estuda o número de sucessos em $n$ tentativas\n",
+    "Em teoria da probabilidade, uma distribuição de probabilidade é uma medida com massa total igual a 1. \n",
     "\n",
-    "#### Fatorial\n",
-    "Loren Ipsum\n",
+    "### Fatorial\n",
+    "O produtório obtido de $n$ por todos os seus antecessores naturais positivos.\n",
     "\n",
-    "#### Arranjo Matemático\n",
-    "Loren Ipsum\n",
+    "$n! = n \\cdot (n-1) \\cdot (n-2) \\dotsc 3 \\cdot 2 \\cdot 1$, para $n \\geq 2$\n",
     "\n",
-    "#### Permutação\n",
-    "O conceito de permutar e de fatorar estão diretamente relacionados. **Ao calcular uma permutação, estamos calculando todas as possibilidades existentes** para arranjar os $n$ elementos de um determinado conjunto, em $k$ espaços. Sendo assim, em permutação, `a ordem dos elementos influência na quantidade de arranjos`.\n",
+    "> Por convenção $0! = 1$\n",
     "\n",
-    "# $P_{n,k} = \\frac{n!}{(n-k)!}$\n",
     "\n",
-    "> Exemplo: Quantas possibilidades existem para arranjar um conjunto de 5 pessoas em 3 cadeiras? $n = 5$ e $k = 3$. Aplicando a equação encontramos o valor $60$ possibilidades\n",
+    "### Arranjo\n",
+    "Sequência ordenada de $k$ elementos distintos, escolhidos entre os $n$ existentes. Cada arranjo difere dos demais:\n",
+    "- Pela natureza dos elementos, onde $(1,3) ≠ (3,5)$\n",
+    "- Pela ordem dos elementos, onde $(1,3) ≠ (3,1)$\n",
     "\n",
-    "#### Combinação\n",
-    "# $C^{n}_{k} = \\binom{n}{k} = \\frac{n!}{k! (n-k)!}$\n",
+    "## $A_{n,k} = \\frac{n!}{(n-k)!}$\n",
     "\n",
-    "#### Número Binomial\n",
-    "Número resultante de uma equação de combinação simples (sem repetição)."
+    "### Permutação\n",
+    "Quantidade de arranjos realizados com a totalidade dos elementos do conjunto.\n",
+    "\n",
+    "### Combinação\n",
+    "Assim como os arranjos, combinações são sequências ordenadas de $k$ elementos distintos, escolhidos entre os $n$ existentes. Contudo, em combinações, considera-se apenas os elementos que compõem a sequência, não importando a ordem dos mesmo. Assim, cada combinação difere das demais apenas:\n",
+    "- Pela natureza dos elementos, onde $(1,3) ≠ (3,5)$\n",
+    "\n",
+    "\n",
+    "## $C_{n,k} = \\binom{n}{k} = \\frac{n!}{k! (n-k)!}$\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -65,15 +75,19 @@
     "- $p$ probabilidade de sucesso em uma única tentativa;\n",
     "- $q = 1-p$ probabilidade de fracasso em uma única tentativa;\n",
     "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Concurso para ciêntista de dados\n",
     "\n",
-    "#### Coeficiente Binomial\n",
+    "Em um concurso para preencher uma vaga de cientista de dados temos um total de **10 questões** de múltipla escolha com **3 alternativas possíveis** em cada questão. **Cada questão possui o mesmo valor**. Suponha que um candidato resolva se aventurar sem ter estudado absolutamente nada. Ele resolve chutar todas as respostas. Assumindo que a prova **vale 10 pontos e a nota de corte seja 5**. Obtenha a probabilidade:\n",
     "\n",
-    "Número de maneiras de obter k sucessos em n tentativas, independentemente da ordem.\n",
-    "\n",
-    "# $C^{n}_{k} = \\binom{n}{k} = \\frac{n!}{k! (n-k)!}$\n",
-    "\n",
-    "---\n",
-    "FERREIRA, Valéria. **Análise Estatística**. p. 57. Rio de Janeiro: SESES, 2015."
+    "1. Candidato acertar 5 questões; \n",
+    "2. Candidato passar para a próxima fase do processo seletivo;"
    ]
   },
   {
@@ -82,9 +96,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Bibliotecas\n",
+    "# bibliotecas\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "from scipy.stats import binom"
    ]
   },
@@ -92,40 +105,28 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.21312808006909517"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "binom.sf(4, 10, (1/3))"
+    "# dados do problema\n",
+    "questoes = 10\n",
+    "alternativas = 3\n",
+    "\n",
+    "# número de tentativas do experimento\n",
+    "n = 10\n",
+    "\n",
+    "# probabilidade de sucesso em uma única tentativa\n",
+    "p = 1 / alternativas\n",
+    "\n",
+    "# probabilidade de fracasso em uma única tentativa\n",
+    "q = 1 - p"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0729"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "binom.pmf(2, 5, 0.1)"
+    "### 1. Probabilidade do candidato acertar 5 questões\n",
+    "Neste cenário, o candidato acertará exatamente 5 questões."
    ]
   },
   {
@@ -136,7 +137,7 @@
     {
      "data": {
       "text/plain": [
-       "0.99144"
+       "0.13656454808718183"
       ]
      },
      "execution_count": 4,
@@ -145,27 +146,16 @@
     }
    ],
    "source": [
-    "binom.cdf(2, 5, 0.1)"
+    "# Calculando com método pmf da biblioteca scipy.stats\n",
+    "binom.pmf(5, n, p)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.3280499999999999"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "binom.pmf(1, 5, 0.1).sum()"
+    "### 2. Probabilidade do candidato passar para a próxima fase do processo seletivo\n",
+    "Neste cenário, o candidato poderá acertar 5 ou mais questões, com o limite máximo de n. Então, soma-se a probabilidade de cada ensaio, para obter-se a probabilidade total."
    ]
   },
   {
@@ -176,7 +166,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9914399999999999"
+       "0.2131280800690952"
       ]
      },
      "execution_count": 6,
@@ -185,15 +175,151 @@
     }
    ],
    "source": [
-    "0.32804999999999995 + 0.0729 + 0.59049"
+    "# Calculando com o método pmf da biblioteca scipy.stats e list comprehension\n",
+    "\n",
+    "# probabilidade 5 + 6 + 7 + 8 + 9 + 10 acertos\n",
+    "sum([binom.pmf(k, n, p) for k in range(5, 11, 1)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.21312808006909512"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculando com o método cdf da biblioteca scipy.stats\n",
+    "\n",
+    "# Neste método retorna-se o somatório das probabilidade\n",
+    "# de 0 a k ensaios.\n",
+    "k = 4\n",
+    "espaco_amostral = p + q\n",
+    "espaco_amostral - binom.cdf(k, n, p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.21312808006909517"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculando com  o método sf da biblioteca scipy.stats\n",
+    "\n",
+    "# Neste método retorna-se o:\n",
+    "# espaço amostral - somatório das probabilidade\n",
+    "# de 0 a k ensaios\n",
+    "k = 4\n",
+    "binom.sf(k, n, p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculando sem auxílio de bibliotecas externas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2131280800690952"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fatorial(n: int) -> int:\n",
+    "    \"\"\"\n",
+    "    Calcula o fatorial de um número\n",
+    "    \"\"\"\n",
+    "    return 1 if n < 1 else n * fatorial(n-1)\n",
+    "\n",
+    "\n",
+    "def arranjos(n, k: int) -> float:\n",
+    "    \"\"\"\n",
+    "    Calcula a quantidade de arranjos possíveis,\n",
+    "    de um conjunto de tamanho n, tomados k a k\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # quando n for um conjunto de elementos, então\n",
+    "    # atribui à n a quantidade de elementos do conjunto\n",
+    "    n = len(n) if isinstance(n, list) else n\n",
+    "\n",
+    "    return fatorial(n) / fatorial(n-k)\n",
+    "\n",
+    "\n",
+    "def combinacoes(n, k: int) -> float:\n",
+    "    \"\"\"\n",
+    "    Calcula a quantidade de combinações possíveis,\n",
+    "    de um conjunto de tamanho n, tomados k a k\n",
+    "    \"\"\"\n",
+    "\n",
+    "    return arranjos(n, k) / fatorial(k)\n",
+    "\n",
+    "\n",
+    "def dist_binomial_pmf(s, n: int, p: float) -> list:\n",
+    "    \"\"\"\n",
+    "    Determina a probabilidade de observar k sucessos em n\n",
+    "    ensaios, em que a probabilidade de sucesso para cada\n",
+    "    ensaio seja p\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # n = número de ensaios\n",
+    "    # p = probabilidade de sucesso\n",
+    "    # q = probabilidade de fracasso\n",
+    "    # k = número de sucesso desejado\n",
+    "    q = 1 - p\n",
+    "\n",
+    "    # s é um variável auxiliar\n",
+    "    # poderá conter um valor inteiro ou uma lista de inteiros\n",
+    "    if not isinstance(s, list):\n",
+    "        s = [s]\n",
+    "\n",
+    "    return [combinacoes(n, k) * (p**k) * (q**(n-k)) for k in s]\n",
+    "\n",
+    "\n",
+    "ensaios = list(range(5, 11, 1))\n",
+    "sum(dist_binomial_pmf(ensaios, n, p))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Referências:\n",
+    "\n",
+    "---\n",
+    "FERREIRA, Valéria. **Análise Estatística**. p. 57. Rio de Janeiro: SESES, 2015."
+   ]
   }
  ],
  "metadata": {
