Inclusões de novos resumos e correções

--- a/2-probabilidade-e-amostragem/Aula 1 - Distribuição binomial.ipynb
+++ b/2-probabilidade-e-amostragem/Aula 1 - Distribuição binomial.ipynb
@@ -22,10 +22,19 @@
     "---\n",
     "\n",
     "## Base Teórica\n",
-    "Em teoria da probabilidade, uma distribuição de probabilidade é uma medida com massa total igual a 1. \n",
+    "\n",
+    "\n",
+    "### Distribuição de Probabilidade\n",
+    "Para cada valor de uma variável aleatória discreta, pode-se determinar uma probabilidade correspondente à este valor. Assim, ao listar cada valor de uma variável aleatória, juntamente à sua probabilidade, obtém-se uma distribuição de probabilidade. \n",
+    "\n",
+    "Em teoria da probabilidade, uma distribuição de probabilidade deve satisfazer os seguintes axiomas:\n",
+    "\n",
+    "- A probabilidade de cada valor da variável, é sempre um número real pertencente ao intervalo [0, 1]. Assim: $0 \\leq P(X) \\leq 1$\n",
+    "- A soma de todas as probabilidades do espaço amostral, é sempre igual a 1. Assim: $P(\\Omega) = \\Sigma^{n}_{i=1}P(X_{i})=1$\n",
+    "\n",
     "\n",
     "### Fatorial\n",
-    "O produtório obtido de $n$ por todos os seus antecessores naturais positivos.\n",
+    "Produtório entre $n$ e seus antecessores naturais positivos.\n",
     "\n",
     "$n! = n \\cdot (n-1) \\cdot (n-2) \\dotsc 3 \\cdot 2 \\cdot 1$, para $n \\geq 2$\n",
     "\n",
@@ -34,8 +43,8 @@
     "\n",
     "### Arranjo\n",
     "Sequência ordenada de $k$ elementos distintos, escolhidos entre os $n$ existentes. Cada arranjo difere dos demais:\n",
-    "- Pela natureza dos elementos, onde $(1,3) ≠ (3,5)$\n",
-    "- Pela ordem dos elementos, onde $(1,3) ≠ (3,1)$\n",
+    "- Pela natureza dos elementos, onde $(1,3) \\ne (3,5)$\n",
+    "- Pela ordem dos elementos, onde $(1,3) \\ne (3,1)$\n",
     "\n",
     "## $A_{n,k} = \\frac{n!}{(n-k)!}$\n",
     "\n",
@@ -43,8 +52,8 @@
     "Quantidade de arranjos realizados com a totalidade dos elementos do conjunto.\n",
     "\n",
     "### Combinação\n",
-    "Assim como os arranjos, combinações são sequências ordenadas de $k$ elementos distintos, escolhidos entre os $n$ existentes. Contudo, em combinações, considera-se apenas os elementos que compõem a sequência, não importando a ordem dos mesmo. Assim, cada combinação difere das demais apenas:\n",
-    "- Pela natureza dos elementos, onde $(1,3) ≠ (3,5)$\n",
+    "Assim como os arranjos, combinações são sequências ordenadas de $k$ elementos distintos, escolhidos entre os $n$ existentes. Contudo, em combinações, considera-se apenas os elementos que compõem a sequência, não importando a ordem dos mesmo. Dessa forma, cada combinação difere das demais apenas:\n",
+    "- Pela natureza dos elementos, onde $(1,3) \\ne (3,5)$\n",
     "\n",
     "\n",
     "## $C_{n,k} = \\binom{n}{k} = \\frac{n!}{k! (n-k)!}$\n",
@@ -57,7 +66,7 @@
    "metadata": {},
    "source": [
     "## Aula 01: Distribuição binomial\n",
-    "Uma distribuição de probabilidade muito conhecida é a distribuição binomial, que estuda o número de sucessos em $n$ tentativas e as suas respectivas probabilidades. Naturalmente, os valores possíveis são os números inteiros $0, 1, 2, 3, 4, ... , n$.\n",
+    "A distribuição binomial estuda o número de sucessos em $n$ tentativas e as suas respectivas probabilidades. Naturalmente, os valores possíveis são os números inteiros $0, 1, 2, 3, 4, ... , n$.\n",
     "\n",
     "Uma distribuição binomial tem as seguintes características:\n",
     "\n",
@@ -82,7 +91,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Concurso para ciêntista de dados\n",
+    "## Exercícios\n",
+    "\n",
+    "### Concurso para ciêntista de dados\n",
     "\n",
     "Em um concurso para preencher uma vaga de cientista de dados temos um total de **10 questões** de múltipla escolha com **3 alternativas possíveis** em cada questão. **Cada questão possui o mesmo valor**. Suponha que um candidato resolva se aventurar sem ter estudado absolutamente nada. Ele resolve chutar todas as respostas. Assumindo que a prova **vale 10 pontos e a nota de corte seja 5**. Obtenha a probabilidade:\n",
     "\n",
