Inclusão/alteração de definições e ajustes na estrutura de índices

--- a/2-probabilidade-e-amostragem/Aula 1 - Distribuição binomial.ipynb
+++ b/2-probabilidade-e-amostragem/Aula 1 - Distribuição binomial.ipynb
@@ -4,9 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Alura <](img/logo-alura.svg)\n",
-    "<br><br>\n",
-    "    \n",
     "# Estatística com Python parte 2: Probabilidade e Amostragem\n",
     "\n",
     "- Nível: Básico \n",
@@ -29,34 +26,73 @@
     "\n",
     "Em teoria da probabilidade, uma distribuição de probabilidade deve satisfazer os seguintes axiomas:\n",
     "\n",
-    "- A probabilidade de cada valor da variável, é sempre um número real pertencente ao intervalo [0, 1]. Assim: $0 \\leq P(X) \\leq 1$\n",
-    "- A soma de todas as probabilidades do espaço amostral, é sempre igual a 1. Assim: $P(\\Omega) = \\Sigma^{n}_{i=1}P(X_{i})=1$\n",
-    "\n",
-    "\n",
+    "- A probabilidade de cada valor da variável, é sempre um número real pertencente ao intervalo [0, 1]. Assim: $0 \\leqslant P(X) \\leqslant 1$\n",
+    "- A soma de todas as probabilidades do espaço amostral, é sempre igual a 1. Assim: $P(\\Omega) = \\Sigma^{n}_{i=1}P(X_{i})=1$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Fatorial\n",
-    "Produtório entre $n$ e seus antecessores naturais positivos.\n",
+    "O produto de todos os inteiros positivos menores ou iguais a $n$.\n",
     "\n",
     "$n! = n \\cdot (n-1) \\cdot (n-2) \\dotsc 3 \\cdot 2 \\cdot 1$, para $n \\geq 2$\n",
     "\n",
-    "> Por convenção $0! = 1$\n",
-    "\n",
-    "\n",
+    "> Por convenção $0! = 1! = 1$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Arranjo\n",
-    "Sequência ordenada de $k$ elementos distintos, escolhidos entre os $n$ existentes. Cada arranjo difere dos demais:\n",
+    "Sequência ordenada de $k$ elementos distintos, tomados $k$ a $k$, escolhidos entre os $n$ existentes. Cada arranjo difere dos demais:\n",
+    "\n",
     "- Pela natureza dos elementos, onde $(1,3) \\ne (3,5)$\n",
     "- Pela ordem dos elementos, onde $(1,3) \\ne (3,1)$\n",
     "\n",
-    "## $A_{n,k} = \\frac{n!}{(n-k)!}$\n",
+    "$\\Large{A_{n,k} = \\frac{n!}{(n-k)!}}$\n",
     "\n",
+    "válida $\\forall \\,n \\in \\mathbb{N^*}, \\forall \\,k \\in \\mathbb{N^*}$ e com $k \\leqslant n$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Permutação\n",
-    "Quantidade de arranjos realizados com a totalidade dos elementos do conjunto.\n",
+    "Quantidade de arranjos possíveis, onde cada arranjo, possui a totalidade dos elementos do conjunto.\n",
     "\n",
+    "$\\large{P_{n} = n!}$\n",
+    "\n",
+    "válida $\\forall \\,n \\in \\mathbb{N^*}$\n",
+    "\n",
+    "**Com Repetição**\n",
+    "\n",
+    "$\\Large{P^{(n1, \\,n2, \\,..., \\,nr)}_{n} = \\frac{n!}{n1!n2! \\dotsc nr!}}$\n",
+    "\n",
+    "> O fato de possuir repetições para serem permutadas, acarreta em uma dimunuição do número de permutações possíveis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Combinação\n",
-    "Assim como os arranjos, combinações são sequências ordenadas de $k$ elementos distintos, escolhidos entre os $n$ existentes. Contudo, em combinações, considera-se apenas os elementos que compõem a sequência, não importando a ordem dos mesmo. Dessa forma, cada combinação difere das demais apenas:\n",
+    "Conjuntos de $k$ elementos possíveis, tomados $k$ a $k$, escolhidos entre os $n$ existentes. Em combinações, considera-se apenas os elementos que compõem um conjunto, não importando a ordem dos mesmo. Dessa forma, cada combinação difere das demais apenas:\n",
+    "\n",
     "- Pela natureza dos elementos, onde $(1,3) \\ne (3,5)$\n",
     "\n",
+    "> É importante notar a diferença entre as combinações e os arranjos. Entende-se combinações como conjuntos, onde naturalmente a ordem dos elementos não importa. Já em relação a arranjos, os definimos como sequências, que por sua natureza, já destingue a ordem dos seus elementos. Assim:\n",
+    ">\n",
+    "> - **Arranjos** $\\to$ **Sequências**\n",
+    "> - **Combinações** $\\to$ **Conjuntos**.\n",
     "\n",
-    "## $C_{n,k} = \\binom{n}{k} = \\frac{n!}{k! (n-k)!}$\n",
+    "\n",
+    "$\\Large{C_{n,k} = \\binom{n}{k} = \\frac{n!}{k! (n-k)!}}$\n",
+    "\n",
+    "válida $\\forall \\,n,k \\in \\mathbb{N}$ e com $k \\leqslant n$\n",
     "\n",
     "---"
    ]
@@ -75,11 +111,12 @@
     "- $P(k)$ é o número de sucessos em $n$ ensaios.\n",
     "- A probabilidade de sucesso (ocorrer o evento de interesse) é $p$ e o valor de $p$ permanece o mesmo em todos os ensaios.\n",
     "- Os ensaios são independentes: o resultado de um ensaio não tem efeito sobre o resultado de outro.\n",
-    "<br>\n",
     "\n",
-    "# $P(k)=\\binom{n}{k}p^k q^{(n-k)}$\n",
+    "\n",
+    "$\\Large{P(k)=\\binom{n}{k}p^k q^{(n-k)}}$\n",
     "\n",
     "onde:\n",
+    "\n",
     "- $n$ número de tentativas do experimento aleatório;\n",
     "- $p$ probabilidade de sucesso em uma única tentativa;\n",
     "- $q = 1-p$ probabilidade de fracasso em uma única tentativa;\n",
@@ -108,7 +145,6 @@
    "outputs": [],
    "source": [
     "# bibliotecas\n",
-    "import numpy as np\n",
     "from scipy.stats import binom"
    ]
   },
@@ -142,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +187,7 @@
        "0.13656454808718183"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +216,7 @@
        "0.2131280800690952"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +239,7 @@
        "0.21312808006909512"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +265,7 @@
        "0.21312808006909517"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +298,7 @@
        "0.2131280800690952"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,18 +306,24 @@
    "source": [
     "def fatorial(n: int) -> int:\n",
     "    \"\"\"\n",
-    "    Calcula o fatorial de um número\n",
+    "    Calcula o produto de todos os inteiros positivos menores\n",
+    "    ou iguais a n\n",
     "    \"\"\"\n",
     "    return 1 if n < 1 else n * fatorial(n-1)\n",
     "\n",
     "\n",
     "def arranjos(n, k: int) -> float:\n",
     "    \"\"\"\n",
-    "    Calcula a quantidade de arranjos possíveis,\n",
-    "    de um conjunto de tamanho n, tomados k a k\n",
+    "    Calcula a quantidade de sequências ordenadas, formada\n",
+    "    de k elementos distintos, tomados k a k, escolhidos entre\n",
+    "    os n existentes.\n",
+    "\n",
+    "    Cada arranjo difere dos demais:\n",
+    "    pela sua natureza (1,3) != (3,5)\n",
+    "    pela sua ordem (1,3) != (3,1)\n",
     "    \"\"\"\n",
     "\n",
-    "    # quando n for um conjunto de elementos, então\n",
+    "    # quando n for um conjunto de elementos (list), então\n",
     "    # atribui à n a quantidade de elementos do conjunto\n",
     "    n = len(n) if isinstance(n, list) else n\n",
     "\n",
@@ -290,8 +332,11 @@
     "\n",
     "def combinacoes(n, k: int) -> float:\n",
     "    \"\"\"\n",
-    "    Calcula a quantidade de combinações possíveis,\n",
-    "    de um conjunto de tamanho n, tomados k a k\n",
+    "    Calcula a quantidade de conjuntos, formados de k elementos possíveis,\n",
+    "    tomados k a k, escolhidos entre os n existentes\n",
+    "\n",
+    "    Cada combinação difere das demais apenas:\n",
+    "    pela sua natureza (1,3) != (3,5)\n",
     "    \"\"\"\n",
     "\n",
     "    return arranjos(n, k) / fatorial(k)\n",
@@ -329,7 +374,9 @@
     "Referências:\n",
     "\n",
     "---\n",
-    "FERREIRA, Valéria. **Análise Estatística**. p. 57. Rio de Janeiro: SESES, 2015."
+    "\n",
+    "- FERREIRA, Valéria. **Análise Estatística**. Rio de Janeiro: SESES, 2015.\n",
+    "- IEZZI, Gelson. **Fundamento de Matemática Elementar**. São Paulo: ATUAL EDITORA, 1977."
    ]
   }
  ],
